Initial support for maven and node dependencies